crates/vite_task_plan/tests/plan_snapshots/fixtures/additional-env/snapshots/query - tool synthetic task in user task.snap
---
source: crates/vite_task_plan/tests/plan_snapshots/main.rs
expression: "&plan_json"
info:
  args:
    - run
    - env-test
input_file: crates/vite_task_plan/tests/plan_snapshots/fixtures/additional-env
---
[
  {
    "key": [
      "<workspace>/",
      "env-test"
    ],
    "node": {
      "task_display": {
        "package_name": "additional-envs",
        "task_name": "env-test",
        "package_path": "<workspace>/"
      },
      "items": [
        {
          "execution_item_display": {
            "task_display": {
              "package_name": "additional-envs",
              "task_name": "env-test",
              "package_path": "<workspace>/"
            },
            "command": "TEST_VAR=hello_world vt tool print-env TEST_VAR",
            "and_item_index": null,
            "cwd": "<workspace>/"
          },
          "kind": {
            "Leaf": {
              "Spawn": {
                "cache_metadata": {
                  "spawn_fingerprint": {
                    "cwd": "",
                    "program_fingerprint": {
                      "OutsideWorkspace": {
                        "program_name": "vtt"
                      }
                    },
                    "args": [
                      "print-env",
                      "TEST_VAR"
                    ],
                    "env_fingerprints": {
                      "fingerprinted_envs": {
                        "TEST_VAR": "hello_world"
                      },
                      "untracked_env_config": [
                        "<default untracked envs>"
                      ]
                    }
                  },
                  "execution_cache_key": {
                    "UserTask": {
                      "task_name": "env-test",
                      "and_item_index": 0,
                      "extra_args": [],
                      "package_path": ""
                    }
                  },
                  "input_config": {
                    "includes_auto": true,
                    "positive_globs": [],
                    "negative_globs": []
                  }
                },
                "spawn_command": {
                  "program_path": "<tools>/vtt",
                  "args": [
                    "print-env",
                    "TEST_VAR"
                  ],
                  "all_envs": {
                    "NO_COLOR": "1",
                    "PATH": "<workspace>/node_modules/.bin:<tools>:<tools>",
                    "TEST_VAR": "hello_world"
                  },
                  "cwd": "<workspace>/"
                }
              }
            }
          }
        }
      ]
    },
    "neighbors": []
  }
]
